add docs and response for show update opening handler
